--- a/Caliper.Tests/Caliper.Tests.vcxproj
+++ b/Caliper.Tests/Caliper.Tests.vcxproj
@@ -160,6 +160,9 @@
   <ItemGroup>
     <ClCompile Include="Caliper.Tests.cpp" />
     <ClCompile Include="martinez.cpp" />
+    <ClCompile Include="martinez_difference.cpp" />
+    <ClCompile Include="martinez_union.cpp" />
+    <ClCompile Include="martinez_xor.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -167,10 +170,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="point.cpp" />
+    <ClCompile Include="polygon_check.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="point_def.h" />
+    <ClInclude Include="polygon_check.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Caliper\Caliper.vcxproj">
