--- a/Caliper/Caliper.vcxproj
+++ b/Caliper/Caliper.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="point.h" />
     <ClInclude Include="polygon.h" />
     <ClInclude Include="segment.h" />
+    <ClInclude Include="sweep_event.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
