--- a/Caliper/Caliper.vcxproj.filters
+++ b/Caliper/Caliper.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="martinez_sweep_event.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sweep_event.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
