--- a/Caliper/Caliper.vcxproj
+++ b/Caliper/Caliper.vcxproj
@@ -22,7 +22,8 @@
     <ClCompile Include="Caliper.cpp" />
     <ClCompile Include="connector.cpp" />
     <ClCompile Include="contour.cpp" />
-    <ClCompile Include="gdsii.cpp" />
+    <ClCompile Include="gdsii_constants.cpp" />
+    <ClCompile Include="gdsii_io.cpp" />
     <ClCompile Include="segment.cpp" />
     <ClCompile Include="sweep_martinez.cpp" />
     <ClCompile Include="polygon.cpp" />
@@ -32,8 +33,23 @@
     <ClInclude Include="..\Caliper.Polygons\framework.h" />
     <ClInclude Include="connector.h" />
     <ClInclude Include="contour.h" />
-    <ClInclude Include="elements.h" />
+    <ClInclude Include="gdsii_aref.h" />
+    <ClInclude Include="gdsii_boundary.h" />
+    <ClInclude Include="gdsii_box.h" />
+    <ClInclude Include="gdsii_colrow.h" />
+    <ClInclude Include="gdsii_elements.h" />
     <ClInclude Include="gdsii.h" />
+    <ClInclude Include="gdsii_constants.h" />
+    <ClInclude Include="gdsii_io.h" />
+    <ClInclude Include="gdsii_node.h" />
+    <ClInclude Include="gdsii_path.h" />
+    <ClInclude Include="gdsii_sref.h" />
+    <ClInclude Include="gdsii_structure.h" />
+    <ClInclude Include="gdsii_text.h" />
+    <ClInclude Include="gdsii_timestamp.h" />
+    <ClInclude Include="gdsii_transform.h" />
+    <ClInclude Include="gdsii_units.h" />
+    <ClInclude Include="gdsii_xy.h" />
     <ClInclude Include="sweep_martinez.h" />
     <ClInclude Include="sweep_event_martinez.h" />
     <ClInclude Include="point.h" />
