--- a/Caliper.Tests/Caliper.Tests.vcxproj
+++ b/Caliper.Tests/Caliper.Tests.vcxproj
@@ -101,7 +101,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(SolutionDir)Caliper\x64\Debug;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>contour.obj;segment.obj;polygon.obj;connector.obj;sweep_martinez.obj;sweep_union.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>contour.obj;segment.obj;polygon.obj;connector.obj;sweep_martinez.obj;sweep_union.obj;gdsii_io.obj;gdsii_constants.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -159,6 +159,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Caliper.Tests.cpp" />
+    <ClCompile Include="gdsii_read_write.cpp" />
     <ClCompile Include="martinez.cpp" />
     <ClCompile Include="martinez_difference.cpp" />
     <ClCompile Include="martinez_intersection.cpp" />
@@ -175,6 +176,7 @@
     <ClCompile Include="sweep_union.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="gdsii_def.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="point_def.h" />
     <ClInclude Include="polygon_check.h" />
