--- a/Caliper.Tests/Caliper.Tests.vcxproj
+++ b/Caliper.Tests/Caliper.Tests.vcxproj
@@ -159,7 +159,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Caliper.Tests.cpp" />
-    <ClCompile Include="gdsii_read_write.cpp" />
+    <ClCompile Include="gdsii_serdes.cpp" />
     <ClCompile Include="martinez.cpp" />
     <ClCompile Include="martinez_difference.cpp" />
     <ClCompile Include="martinez_intersection.cpp" />
